Add i18n Code
See ualibweb/mod-calendar#42 for full explanation of the steps relating to this change.